[package]
name = "workplace-client"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workplace-common = { path = "../common" }
scorched = "0.5.2"
tungstenite = "0.21.0"
url = "2.5.0"
sysinfo = "0.30.7"
self-replace = "1.3.7"
reqwest = { version = "0.12.1", features = ["blocking"] }
