[package]
name = "workplace-server"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workplace-common = { path = "../common" }
scorched = "0.5.2"
tungstenite = "0.21.0"
eframe = "0.26.2"
once_cell = "1.19.0"
